funcionalidad para agregar autos

--- a/src/module/views/layouts/navbar.njk
+++ b/src/module/views/layouts/navbar.njk
@@ -13,16 +13,21 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
+
+      <a class="navbar-item" href="/car/manage">
+        Manage Cars
+      </a>
+
+      <a class="navbar-item" href="/car/add">
         Add New Car
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="/reservations/manage">
         Manage Reservations
       </a>
 
-      <a class="navbar-item">
-        Manage Users
+      <a class="navbar-item" href="/reservations/add">
+        Add New Reservation
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
