--- a/src/module/car/views/index.njk
+++ b/src/module/car/views/index.njk
@@ -1,12 +1,51 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-  </head>
-  <body>
-    {% include "./layouts/navbar.njk" %}
-  </body>
-</html>
+{% extends "views/layouts/base.njk" %}
+
+{% block body %}
+  <section class="section">
+    <div class="container">
+      <nav class="level">
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Total Cars</p>
+            <p class="title">{{ cars.length }}</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Available Cars</p>
+            <p class="title">1</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Reservations</p>
+            <p class="title">0</p>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </section>
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+        Last Added Car
+      </h1>
+        <ul class="subtitle">
+          <li>ID: {{ cars[cars.length - 1].id }}</li>
+          <li>Brand: {{ cars[cars.length - 1].brand }}</li>
+          <li>Model: {{ cars[cars.length - 1].model }}</li>
+          <li>Year: {{ cars[cars.length - 1].year }}</li>
+          <li>{{ cars[cars.length - 1].kms }} kms</li>
+          <li>Color: {{ cars[cars.length - 1].color }}</li>
+          <li>Air Conditioner: {{ cars[cars.length - 1].ac }}</li>
+          <li>Max passengers: {{ cars[cars.length - 1].passengers }}</li>
+          <li>Transmission: {{ cars[cars.length - 1].transmission }}</li>
+          <li>Price: $ {{ cars[cars.length - 1].price }}</li>
+          <li>Created: {{ cars[cars.length - 1].createdAt }}</li>
+          <li>Updated: {{ cars[cars.length - 1].updatedAt }}</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+{% endblock %}
