--- a/src/module/views/layouts/base.njk
+++ b/src/module/views/layouts/base.njk
@@ -11,5 +11,6 @@
     {% include "./navbar.njk" %}
 
     {% block body %}{% endblock %}
+    {% block footerScripts %}{% endblock %}
   </body>
 </html>
