--- a/src/module/car/views/edit.njk
+++ b/src/module/car/views/edit.njk
@@ -8,3 +8,7 @@
     </div>
   </section>
 {% endblock %}
+
+{% block footerScripts %}
+  <script type="text/javascript" src="/js/cancel.js"></script>
+{% endblock %}
