--- a/src/module/car/views/layouts/form.njk
+++ b/src/module/car/views/layouts/form.njk
@@ -119,7 +119,7 @@
       <button class="button is-link" type="submit">Submit</button>
     </div>
     <div class="control">
-      <button class="button is-link is-light" type="button">Cancel</button>
+      <button class="button is-link is-light cancel-button" type="button">Cancel</button>
     </div>
   </div>
 
