--- a/src/module/car/views/layouts/table-row.njk
+++ b/src/module/car/views/layouts/table-row.njk
@@ -1,4 +1,9 @@
-<tr>
+<tr class="car-data"
+data-id={{ car.id }}
+data-brand={{ car.brand }}
+data-model={{ car.model }}
+data-year={{ car.year }}
+>
   <th>{{ car.id }}</th>
   <td>{{ car.brand }}</td>
   <td>{{ car.model }}</td>
@@ -10,8 +15,20 @@
   <td>{{ car.transmission }}</td>
   <td>{{ car.price }}</td>
   <td>
-    <a href={{"/car/view/" + car.id}}>View</a>
-    <a href={{"/car/edit/" + car.id}}>Edit</a>
-    <a href={{"/car/delete/" + car.id}}>Delete</a>
+    <a class="button" href={{"/car/view/" + car.id}}>
+      <span class="icon">
+        <i class="fas fa-search has-text-black"></i>
+      </span>
+    </a>
+    <a class="button" href={{"/car/edit/" + car.id}}>
+      <span class="icon">
+        <i class="fas fa-edit has-text-black"></i>
+      </span>
+    </a>
+    <button class="button delete-button">
+      <span class="icon">
+        <i class="fas fa-trash"></i>
+      </span>
+    </button>
   </td>
 </tr>
