--- a/src/module/car/views/layouts/table-row.njk
+++ b/src/module/car/views/layouts/table-row.njk
@@ -1,8 +1,8 @@
 <tr class="car-data"
-data-id={{ car.id }}
-data-brand={{ car.brand }}
-data-model={{ car.model }}
-data-year={{ car.year }}
+data-id="{{ car.id }}"
+data-brand="{{ car.brand }}"
+data-model="{{ car.model }}"
+data-year="{{ car.year }}"
 >
   <th>{{ car.id }}</th>
   <td>{{ car.brand }}</td>
@@ -15,12 +15,12 @@ data-year={{ car.year }}
   <td>{{ car.transmission }}</td>
   <td>{{ car.price }}</td>
   <td>
-    <a class="button" href={{"/car/view/" + car.id}}>
+    <a class="button" href="{{"/car/view/" + car.id}}">
       <span class="icon">
         <i class="fas fa-search has-text-black"></i>
       </span>
     </a>
-    <a class="button" href={{"/car/edit/" + car.id}}>
+    <a class="button" href="{{"/car/edit/" + car.id}}">
       <span class="icon">
         <i class="fas fa-edit has-text-black"></i>
       </span>
