--- a/src/module/car/views/view.njk
+++ b/src/module/car/views/view.njk
@@ -1,48 +1,95 @@
 {% extends "views/layouts/base.njk" %}
 
 {% block body %}
-  <section class="hero is-light">
-    <div class="hero-body">
-      <div class="car-data"
-      data-id={{ car.id }}
-      data-brand={{ car.brand }}
-      data-model={{ car.model }}
-      data-year={{ car.year }}
+  <section class="section is-light">
+    <div class="car-data"
+      data-id="{{ car.id }}"
+      data-brand="{{ car.brand }}"
+      data-model="{{ car.model }}"
+      data-year="{{ car.year }}"
       >
-        <div class="container">
-          <h1 class="title">
-            {{ car.brand }}
-            {{ car.model }}
-            {{ car.year }}
-          </h1>
-          <ul class="subtitle">
-            <li>{{ car.kms }} Kms</li>
-            <li>Color: {{ car.color }}</li>
-            <li>Air Conditioner: {{ car.ac }}</li>
-            <li>Max passengers: {{ car.passengers }}</li>
-            <li>Transmission: {{ car.transmission }}</li>
-            <li>Price: $ {{ car.price }}</li>
-            <li>Created: {{ car.createdAt }}</li>
-            <li>Updated: {{ car.updatedAt }}</li>
-          </ul>
-          <div class="buttons">
-            <a class="button is-link is-outlined" href={{ '/car/edit/' + car.id }}>
-              <span>Edit</span>
-              <span class="icon is-small">
-                <i class="fas fa-edit"></i>
-              </span>
-            </a>
-            <button class="button is-danger is-outlined delete-button">
-              <span>Delete</span>
-              <span class="icon is-small">
-                <i class="fas fa-times"></i>
-              </span>
-            </button>
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <h1 class="title">
+              {{ car.brand }}
+              {{ car.model }}
+              {{ car.year }}
+            </h1>
+            <table class="table">
+              <tbody>
+                <tr>
+                  <th>ID</th>
+                  <td>{{ car.id }}</td>
+                </tr>
+                <tr>
+                  <th>Brand</th>
+                  <td>{{ car.brand }}</td>
+                </tr>
+                <tr>
+                  <th>Model</th>
+                  <td>{{ car.model }}</td>
+                </tr>
+                <tr>
+                  <th>Year</th>
+                  <td>{{ car.year }}</td>
+                </tr>
+                <tr>
+                  <th>Kilometer Count</th>
+                  <td>{{ car.kms }} kms</td>
+                </tr>
+                <tr>
+                  <th>Color</th>
+                  <td>{{ car.color }}</td>
+                </tr>
+                <tr>
+                  <th>Air Conditioner</th>
+                  <td>{{ car.ac }}</td>
+                </tr>
+                <tr>
+                  <th>Max passengers</th>
+                  <td>{{ car.passengers }}</td>
+                </tr>
+                <tr>
+                  <th>Transmission</th>
+                  <td>{{ car.transmission }}</td>
+                </tr>
+                <tr>
+                  <th>Price</th>
+                  <td>$ {{ car.price }}</td>
+                </tr>
+                <tr>
+                  <th>Created</th>
+                  <td>{{ car.createdAt }}</td>
+                </tr>
+                <tr>
+                  <th>Updated</th>
+                  <td>{{ car.updatedAt }}</td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="buttons">
+              <a class="button is-link is-outlined" href="{{ '/car/edit/' + car.id }}">
+                <span>Edit</span>
+                <span class="icon is-small">
+                  <i class="fas fa-edit"></i>
+                </span>
+              </a>
+              <button class="button is-danger is-outlined delete-button">
+                <span>Delete</span>
+                <span class="icon is-small">
+                  <i class="fas fa-times"></i>
+                </span>
+              </button>
+            </div>
+          </div>
+          <div class="column">
+            <img src="{{ car.img if car.img else '/img/no-image-available.jpg' }}" alt="car-image">
           </div>
         </div>
       </div>
-      {% include "car/views/layouts/delete-modal.njk" %}
     </div>
+    {% include "car/views/layouts/delete-modal.njk" %}
   </section>
 {% endblock %}
 
