funcionalidad para crear, editar y ver usuarios, modifica setup db y di

--- a/src/module/views/layouts/navbar.njk
+++ b/src/module/views/layouts/navbar.njk
@@ -22,6 +22,14 @@
         Add New Car
       </a>
 
+      <a class="navbar-item" href="/user/manage">
+        Manage Users
+      </a>
+
+      <a class="navbar-item" href="/user/add">
+        Add New User
+      </a>
+
       <a class="navbar-item" href="/reservations/manage">
         Manage Reservations
       </a>
