funcionalidad para crear, editar y ver reservas, modifica setup db y di

--- a/src/module/views/layouts/navbar.njk
+++ b/src/module/views/layouts/navbar.njk
@@ -30,11 +30,11 @@
         Add New User
       </a>
 
-      <a class="navbar-item" href="/reservations/manage">
+      <a class="navbar-item" href="/reservation/manage">
         Manage Reservations
       </a>
 
-      <a class="navbar-item" href="/reservations/add">
+      <a class="navbar-item" href="/reservation/add">
         Add New Reservation
       </a>
 
