Agrega información de reservas en vista individual auto y usuario
- Modifica repositorios de los módulos para integrar instancias asociadas de otros módulos
- Agrega botones para interactuar con reservas

--- a/src/module/car/views/index.njk
+++ b/src/module/car/views/index.njk
@@ -7,19 +7,7 @@
         <div class="level-item has-text-centered">
           <div>
             <p class="heading">Total Cars</p>
-            <p class="title">{{ cars.length }}</p>
-          </div>
-        </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Available Cars</p>
-            <p class="title">0</p>
-          </div>
-        </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Reservations</p>
-            <p class="title">0</p>
+            <p class="title">{{ carsLength }}</p>
           </div>
         </div>
       </nav>
