--- a/src/module/reservation/views/view.njk
+++ b/src/module/reservation/views/view.njk
@@ -15,11 +15,11 @@
             </tr>
             <tr>
               <th>Start Date</th>
-              <td>{{ formattedStartDate }}</td>
+              <td>{{ reservation.formattedDates.startDate }}</td>
             </tr>
             <tr>
               <th>Finish Date</th>
-              <td>{{ formattedFinishDate }}</td>
+              <td>{{ reservation.formattedDates.finishDate }}</td>
             </tr>
             <tr>
               <th>Rented Car</th>
