--- a/src/module/views/layouts/base.njk
+++ b/src/module/views/layouts/base.njk
@@ -13,5 +13,6 @@
 
     {% block body %}{% endblock %}
     {% block footerScripts %}{% endblock %}
+    <script type="text/javascript" src="/js/toggle-menu.js"></script>
   </body>
 </html>
