--- a/src/module/car/views/layouts/delete-modal.njk
+++ b/src/module/car/views/layouts/delete-modal.njk
@@ -4,7 +4,7 @@
     <form class="modal-form" method="POST">
       <header class="modal-card-head">
         <p class="modal-card-title">Delete Car</p>
-        <button class="delete cancel-delete-button" type="button" aria-label="close"></button>
+        <button class="cancel-delete-button" type="button" aria-label="close"></button>
       </header>
       <section class="modal-card-body modal-content">
         <!-- Content ... -->
