--- a/src/module/car/views/manage.njk
+++ b/src/module/car/views/manage.njk
@@ -36,5 +36,5 @@
 {% endblock %}
 
 {% block footerScripts %}
-  <script type="text/javascript" src="/js/toggle-modal.js"></script>
+  <script type="text/javascript" src="/js/toggle-delete-modal.js"></script>
 {% endblock %}
