--- a/src/module/reservation/views/layouts/status-pending-buttons.njk
+++ b/src/module/reservation/views/layouts/status-pending-buttons.njk
@@ -1,14 +1,14 @@
-<button class="button finish-button" disabled title="An unpaid Reservation cannot be marked as Finished">
+<button class="button pay-button" title="Mark this reservation as Paid">
   <span class="icon">
-    <i class="fas fa-check"></i>
+    <i class="fas fa-dollar-sign"></i>
   </span>
 </button>
-<a class="button" href="{{"/reservation/view/" + reservation.id}}">
+<a class="button" href="{{"/reservation/view/" + reservation.id}}" title="View reservation details">
   <span class="icon">
     <i class="fas fa-search has-text-black"></i>
   </span>
 </a>
-<a class="button" href="{{"/reservation/edit/" + reservation.id}}">
+<a class="button" href="{{"/reservation/edit/" + reservation.id}}" title="Edit reservation">
   <span class="icon">
     <i class="fas fa-edit has-text-black"></i>
   </span>
