--- a/src/module/views/layouts/navbar.njk
+++ b/src/module/views/layouts/navbar.njk
@@ -44,14 +44,7 @@
         </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
+          <a class="navbar-item" href="https://github.com/mpaternostro/rent-a-car/issues/new">
             Report an issue
           </a>
         </div>
