actualiza y agrega tests
- Actualiza tests módulos Car y user
- Agrega tests módulo reservation
- Agrega tests para funciones inicializadoras de cada módulo
- Agrega tests para DI

--- a/src/module/reservation/views/view.njk
+++ b/src/module/reservation/views/view.njk
@@ -24,7 +24,11 @@
             <tr>
               <th>Rented Car</th>
               <td>
-                <a href={{ "/car/view/" + car.id }}>{{ "#" + car.id + " " + car.brand + " " + car.model + " " + car.year}}</a>
+                {% if car %}
+                  <a href={{ "/car/view/" + car.id }}>{{ "#" + car.id + " " + car.brand + " " + car.model + " " + car.year}}</a>
+                {% else %}
+                  <p>Rented Car was deleted from Database</p>
+                {% endif %}
               </td>
             </tr>
             <tr>
